force-app/main/default/objects/Student__c/validationRules/CourceFeesrule.validationRule-meta.xml
<ValidationRule>
    <fullName>CourceFeesrule</fullName>
    <active>false</active>
    <errorConditionFormula>Course_Fees__c &lt; PRIORVALUE( Course_Fees__c )</errorConditionFormula>
    <errorDisplayField>Course_Fees__c</errorDisplayField>
    <errorMessage>Course Fees cannot be Decreased.</errorMessage>
</ValidationRule>