force-app/main/default/objects/Student__c/validationRules/Enrollment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrollment_Date</fullName>
    <active>false</active>
    <errorConditionFormula>OR(DAY(  Enrollment_Date__c  ) &gt; 15,
  MONTH(  Enrollment_Date__c  )  &lt;&gt;  MONTH( TODAY() )
)</errorConditionFormula>
    <errorDisplayField>Enrollment_Date__c</errorDisplayField>
    <errorMessage>Enrollment Date cannot be after the 15th day of month.</errorMessage>
</ValidationRule>