force-app/main/default/objects/Student__c/validationRules/Multiplethecoursefees.validationRule-meta.xml
<ValidationRule>
    <fullName>Multiplethecoursefees</fullName>
    <active>true</active>
    <errorConditionFormula>MOD( Course_Fees__c,100)  &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>Course_Fees__c</errorDisplayField>
    <errorMessage>Course Fees must be a multiple of 100 only.</errorMessage>
</ValidationRule>